修正部分跑版問題。調整排版

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ hr{
     height: 40px;
     font-size: 14px;
     padding-left: 50px;
+    cursor: pointer;
     /* border:  1px solid white; */
 }
 
